Fixed missing concept issues based on the new release of CIEL - 20130914

--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
@@ -231,8 +231,8 @@
 				<td>HIV:</td>
 				<td>
 					<obs conceptId="159427AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true"
-							answerConceptIds="703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1402AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-							answerLabels="HIV Positive,HIV Negative,Not Tested"/>
+						 answerConceptIds="703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1402AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+						 answerLabels="HIV Positive,HIV Negative,Not Tested"/>
 				</td>
 			</tr>
 			<tr>
@@ -249,110 +249,115 @@
 	<td colspan="2">
 		<legend>Urinalysis</legend>
 		<table align="center" width="100%" class="tb1">
-			<tr>
-				<td>
-					<table>
-						<tr>
-							<td>Urine Microscopy</td>
-							<td>
-								<obs conceptId="56AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" rows="3" cols="38"/>
-							</td>
-						</tr>
-						<tr>
-							<td>Urinary Albumin</td>
-							<td>
-								<obs conceptId="849AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-							</td>
-						</tr>
-						<tr>
-							<td>Glucose Measurement (Qualitative)</td>
-							<td>
-								<obs conceptId="159734AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerConceptIds="1115AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1365AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerLabels="Normal,Trace,One Plus(+),Two Plus(++),Three Plus(+++),Four Plus(++++)"/>
-							</td>
-						</tr>
-						<tr>
-							<td>Urine pH</td>
-							<td>
-								<obs conceptId="161438AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="urine-ph"/>
-							</td>
-						</tr>
-						<tr>
-							<td>Urine Specific Gravity</td>
-							<td>
-								<obs conceptId="161439AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="urine-specific-gravity"/>
-							</td>
-						</tr>
-						<tr>
-							<td>Urine Nitrite Test</td>
-							<td>
-								<obs conceptId="161440AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerLabels="Negative,Positive,One Plus(+),Two Plus(++)"/>
-							</td>
-						</tr>
-					</table>
-				</td>
-				<td>
-					<table>
-						<tr>
-							<td>Urine Leukocyte Esterase Test</td>
-							<td>
-								<obs conceptId="161441AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerLabels="Negative,Trace,One Plus(+),Two Plus(++),Three Plus(+++)"/>
-							</td>
-						</tr>
-						<tr>
-							<td>Urinary Ketone</td>
-							<td>
-								<obs conceptId="161442AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerLabels="Negative,Trace - 5,One Plus(+) - 15,Two Plus(++) - 50,Three Plus(+++) - 150"/>
-								mg/dL
-							</td>
-						</tr>
-						<tr>
-							<td>Urine Bile Salt Test</td>
-							<td>
-								<obs conceptId="161444AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerConceptIds="1115AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerLabels="Normal,Trace - 1,One Plus(+) - 4,Two Plus(++) - 8,Three Plus(+++) - 12"/>
-								mg/dL
-							</td>
-						</tr>
-						<tr>
-							<td>Urine Bile Pigment Test</td>
-							<td>
-								<obs conceptId="161443AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerLabels="Negative,One Plus(+),Two Plus(++),Three Plus(+++)"/>
-							</td>
-						</tr>
-						<tr>
-							<td>Urine Color</td>
-							<td>
-								<obs conceptId="162106AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-							</td>
-						</tr>
-						<tr>
-							<td>Urine Turbidity</td>
-							<td>
-								<obs conceptId="162101AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-							</td>
-						</tr>
-						<tr>
-							<td>Urine Dipstick for Blood</td>
-							<td>
-								<obs conceptId="162096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerLabels="Negative,Trace,One Plus(+),Two Plus(++),Three Plus(+++)"/>
-							</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
+			<obsgroup groupingConceptId="161446AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
+				<tr>
+					<td>
+						<table>
+							<tr>
+								<td>Urine Microscopy</td>
+								<td>
+									<obs conceptId="56AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" rows="3" cols="38"/>
+								</td>
+							</tr>
+							<tr>
+								<td>Urinary Albumin</td>
+								<td>
+									<obs conceptId="1875AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1365AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerLabels="Negative,Trace - 15,One Plus(+) - 30,Two Plus(++) - 100,Three Plus(+++) - 300,Four Plus(++++) - 1000"/>
+									mg/dL
+								</td>
+							</tr>
+							<tr>
+								<td>Glucose Measurement (Qualitative)</td>
+								<td>
+									<obs conceptId="159734AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerConceptIds="1115AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1365AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerLabels="Normal,Trace,One Plus(+),Two Plus(++),Three Plus(+++),Four Plus(++++)"/>
+								</td>
+							</tr>
+							<tr>
+								<td>Urine pH</td>
+								<td>
+									<obs conceptId="161438AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="urine-ph"/>
+								</td>
+							</tr>
+							<tr>
+								<td>Urine Specific Gravity</td>
+								<td>
+									<obs conceptId="161439AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="urine-specific-gravity"/>
+								</td>
+							</tr>
+							<tr>
+								<td>Urine Nitrite Test</td>
+								<td>
+									<obs conceptId="161440AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerLabels="Negative,Positive,One Plus(+),Two Plus(++)"/>
+								</td>
+							</tr>
+						</table>
+					</td>
+					<td>
+						<table>
+							<tr>
+								<td>Urine Leukocyte Esterase Test</td>
+								<td>
+									<obs conceptId="161441AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerLabels="Negative,Trace,One Plus(+),Two Plus(++),Three Plus(+++)"/>
+								</td>
+							</tr>
+							<tr>
+								<td>Urinary Ketone</td>
+								<td>
+									<obs conceptId="161442AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerLabels="Negative,Trace - 5,One Plus(+) - 15,Two Plus(++) - 50,Three Plus(+++) - 150"/>
+									mg/dL
+								</td>
+							</tr>
+							<tr>
+								<td>Urine Bile Salt Test</td>
+								<td>
+									<obs conceptId="161444AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerConceptIds="1115AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerLabels="Normal,Trace - 1,One Plus(+) - 4,Two Plus(++) - 8,Three Plus(+++) - 12"/>
+									mg/dL
+								</td>
+							</tr>
+							<tr>
+								<td>Urine Bile Pigment Test</td>
+								<td>
+									<obs conceptId="161443AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerLabels="Negative,One Plus(+),Two Plus(++),Three Plus(+++)"/>
+								</td>
+							</tr>
+							<tr>
+								<td>Urine Color</td>
+								<td>
+									<obs conceptId="162106AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+								</td>
+							</tr>
+							<tr>
+								<td>Urine Turbidity</td>
+								<td>
+									<obs conceptId="162101AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+								</td>
+							</tr>
+							<tr>
+								<td>Urine Dipstick for Blood</td>
+								<td>
+									<obs conceptId="162096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										 answerLabels="Negative,Trace,One Plus(+),Two Plus(++),Three Plus(+++)"/>
+								</td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+			</obsgroup>
 		</table>
 	</td>
 </tr>
