--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsInfantFeeding.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsInfantFeeding.html
@@ -63,26 +63,31 @@
 					<legend>Infant Feeding</legend>
 					<table align="center" width="100%" class="tb1">
 						<tr>
-							<td width="250">Infant feeding counselling done (all mothers):</td>
-							<td>
-								Missing Concept
+							<td colspan="2">
+								<obs conceptId="1379AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptId="161651AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabel="Infant feeding counselling done (all mothers)"
+									 style="checkbox"/>
 							</td>
 						</tr>
 						<tr>
-							<td>Counselling on exclusive breastfeeding done:</td>
-							<td>
-								<obs conceptId="161096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+							<td colspan="2">
+								<obs conceptId="1379AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptId="161096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabel="Counselling on exclusive breastfeeding done"
+									 style="checkbox"/>
 							</td>
 						</tr>
 						<tr>
-							<td>Infant feeding options for HIV infected discussed:</td>
-							<td>
-								<obs conceptId="162091AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+							<td colspan="2">
+								<obs conceptId="1379AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptId="162091AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabel="Infant feeding options for HIV infected discussed"
+									 style="checkbox"/>
 							</td>
 						</tr>
 						<tr>
-							<td>If yes, mother decision:</td>
+							<td>If yes (above), mother decision:</td>
 							<td>
 								<obs conceptId="1151AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 									 answerConceptIds="5526AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1595AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,6046AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159418AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
