--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
@@ -242,9 +242,8 @@
 							<td width="200">General Condition:</td>
 							<td>
 								<obs conceptId="160085AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-										answerConceptIds="1855AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-										answerLabels="Good"/>
-								TODO: Add Fair and Poor
+										answerConceptIds="1855AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162133AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162132AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+										answerLabels="Good, Fair, Poor"/>
 							</td>
 						</tr>
 						<tr>
@@ -292,7 +291,11 @@
 						</tr>
 						<tr>
 							<td>Baby's Condition</td>
-							<td>Missing Concept</td>
+							<td>
+								<obs conceptId="162134AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptIds="1855AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162133AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162132AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabels="Good, Fair, Poor"/>
+							</td>
 						</tr>
 						<tr>
 							<td>Baby's Feeding Method</td>
