--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsFollowupVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsFollowupVisit.html
@@ -27,6 +27,11 @@
 
 	</style>
 	<script type="text/javascript">
+
+		var YES_CONCEPT_ID = 1065;
+		var NO_CONCEPT_ID = 1066;
+		var WHITE_COLOR_CONCEPT_ID = 1075;
+
 		function displayDate(birthDate)
 		{
 			var d1 = new Date(birthDate);
@@ -66,10 +71,69 @@
 			}
 			return Years +" Y(s)"+"<br />" + Months + " Mnth(s)" +"<br />"+ wks + " wk(s)" +"<br />"+ remDays +" Day(s)";
 		}
+
+		function getTetracycline() {
+			if (getValue('tetracycline-geven.value') == YES_CONCEPT_ID )
+				jq('#teo-given').html("ONLY at birth");
+			else
+				jq('#teo-given').html(" ");
+		}
+
+		function pupilExamination() {
+			if (getValue('pupil-examination.value') ==  WHITE_COLOR_CONCEPT_ID )
+				jq('#pupil-condition').html("Refer");
+			else
+				jq('#pupil-condition').html(" ");
+		}
+
+		function sightExamination() {
+			if (getValue('sight-examination.value') ==  NO_CONCEPT_ID )
+				jq('#not-following-objects').html("Refer to eye clinic");
+			else
+				jq('#not-following-objects').html(" ");
+		}
+
+		function squint() {
+			if (getValue('squint.value') ==  YES_CONCEPT_ID )
+				jq('#squint-eyes').html("Refer to eye clinic");
+			else
+				jq('#squint-eyes').html(" ");
+		}
+
+		function loadingImages(){
+			var img_pupil = document.createElement("IMG");
+			img_pupil.src = '/' + OPENMRS_CONTEXT_PATH +  '/ms/uiframework/resource/kenyaemr/images/htmlforms/mchcs/whitepupil.jpg';
+			img_pupil.setAttribute("height", "50");
+			img_pupil.setAttribute("width", "200");
+			img_pupil.setAttribute("alt","Check for the pupil color");
+			document.getElementById('pupil-image').appendChild(img_pupil);
+
+			var img_squint_eyes = document.createElement("IMG");
+			img_squint_eyes.src = '/' + OPENMRS_CONTEXT_PATH +  '/ms/uiframework/resource/kenyaemr/images/htmlforms/mchcs/squint.jpg';
+			img_squint_eyes.setAttribute("height", "50");
+			img_squint_eyes.setAttribute("width", "200");
+			document.getElementById('squint-eyes-image').appendChild(img_squint_eyes);
+		}
 		jq(function(){
 			var birthDate = "<lookup expression="patient.birthdate" />";
 			jq('#age').html(displayDate(birthDate));
 			jq('#calculated-age-deworming').html(displayDate(birthDate));
+			//toggle options for tetracycline given
+			getTetracycline();
+			jq('#tetracycline-geven input').click(getTetracycline);
+			//pupils examination
+			pupilExamination();
+			jq('#pupil-examination input').click(pupilExamination);
+			//sight examination
+			sightExamination();
+			jq('#sight-examination input').click(sightExamination);
+			//squint condition
+			squint();
+			jq('#squint input').click(squint);
+			//loading images
+			loadingImages();
+
+
 		});
 	</script>
 	<div class="ke-form-header">
@@ -84,7 +148,7 @@
 		<table border="0" class="hei" align="center">
 			<tbody>
 				<tr>
-					<td colspan="3" style="background-color: #696969; color: #ffffff;text-align:center;">
+					<td colspan="3" style="background-color: #696969; color: #ffffff;">
 						GROWTH, NUTRITION AND DEVELOPMENT MONITORING
 					</td>
 				</tr>
@@ -142,7 +206,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td colspan="3" style="background-color: #696969; color: #ffffff;">MileStones</td>
+					<td colspan="3" style="background-color: #696969; color: #ffffff;">MILESTONES</td>
 				</tr>
 				<tr>
 					<td colspan="2">
@@ -154,17 +218,17 @@
 							<tr>
 								<td colspan="2">
 									<div style="float: left; padding-right: 30px">
-										<obs conceptId="1200AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="160632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Social Smile" /><br />
-										<obs conceptId="1200AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="160632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Head Holding/Control" /><br />
-										<obs conceptId="1200AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="160632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Turns towards the origin of sound" /><br />
-										<obs conceptId="1200AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="160632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Extends hand to grasp a toy" /> <br />
+										<obs conceptId="162069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="162056AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Social Smile" /><br />
+										<obs conceptId="162069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="162057AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Head Holding/Control" /><br />
+										<obs conceptId="162069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="162058AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Turns towards the origin of sound" /><br />
+										<obs conceptId="162069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="162059AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Extends hand to grasp a toy" /> <br />
 
 									</div>
 									<div style="float: left">
-										<obs conceptId="1200AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="160632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Sitting" /> <br />
-										<obs conceptId="1200AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="160632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Standing" /><br />
-										<obs conceptId="1200AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="160632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Walking" /> <br />
-										<obs conceptId="1200AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="160632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Talking" /> <br />
+										<obs conceptId="162069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="162061AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Sitting" /> <br />
+										<obs conceptId="162069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="162062AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Standing" /><br />
+										<obs conceptId="162069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="162063AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Walking" /> <br />
+										<obs conceptId="162069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="162060AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Talking" /> <br />
 									</div>
 								</td>
 								<td><obs conceptId="1189AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="1115AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,6022AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,6025AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Normal(N),Delayed(D),Regressed(R)" answerSeparator="&lt;br/&gt;"/></td>
@@ -232,28 +296,31 @@
 									</tr>
 									<tr>
 										<td>Tetracycline<br /> Eye Ointment<br />(TEO) Given?</td>
-										<td>Yes/No</td>
-										<td id="teo-given" class="value">Only at Birth</td>
+										<td><obs conceptId="162077AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No" style="radio"  id="tetracycline-geven"/></td>
+										<td id="teo-given" class="value"></td>
 									</tr>
 									<tr>
-										<td>PUPIL</td>
-										<td>Black<br />White</td>
-										<td id="white-pupil" class="value">If White Refer</td>
+										<td>
+											PUPIL<br />
+											<div id="pupil-image"></div>
+										</td>
+										<td><obs conceptId="162064AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="162065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1075AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Black,White" style="radio" id="pupil-examination" /></td>
+										<td id="pupil-condition" class="value"></td>
 									</tr>
 									<tr>
-										<td>SIGHT</td>
-										<td>Following Objects<br />Not Following Objects</td>
-										<td id="not-following-objects" class="value">Refer to Eye Clinic</td>
+										<td>
+											SIGHT
+										</td>
+										<td><obs conceptId="162067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Following Objects,Not Following Objects" style="radio" id="sight-examination"/></td>
+										<td id="not-following-objects" class="value"></td>
 									</tr>
 									<tr>
-										<td>SQUINT<br />(Crossed Eyes)</td>
-										<td>Squint<br />No Squint</td>
-										<td id="squint-eyes" class="value">Refer to Eye Clinic</td>
-									</tr>
-									<tr>
-										<td>ANY Other Problems</td>
-										<td>Yes<br />No</td>
-										<td id="other-problems" class="value">Refer to Eye Clinic</td>
+										<td class="image">SQUINT<br />(Crossed Eyes)
+											<br />
+											<div id="squint-eyes-image"></div>
+										</td>
+										<td><obs conceptId="162066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Squint,No Squint" style="radio" id="squint"/></td>
+										<td id="squint-eyes" class="value"></td>
 									</tr>
 								</tbody>
 							</table>
@@ -275,13 +342,13 @@
 								<tr>
 									<th>Age</th>
 									<th>Drug</th>
-									<th>Dosage</th>
+									<th>Dosage/Units</th>
 								</tr>
 								<obsgroup groupingConceptId="1442AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
 									<tr>
 										<td id="calculated-age-deworming" class="value"></td>
-										<td><obs conceptId="1282AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerClasses="Drug" style="autocomplete" /></td>
-										<td><obs conceptId="1443AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+										<td><obs conceptId="1282AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="79413AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,70439AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Mebendazole,Albendazole" style="radio" /></td>
+										<td><obs conceptId="1443AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /><obs conceptId="1621AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
 										<td><obs conceptId="5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" /></td>
 									</tr>
 								</obsgroup>
