--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsEnrollment.html
@@ -33,7 +33,7 @@
 
 			var birthdate = new Date("<lookup expression="patient.birthdate" />");
 			var patientId = <lookup expression="patient.patientId"/>;
-			var encDate = getValue('encounter-date.value');
+			var encDate = new Date();
 
 			var YES_CONCEPT_ID = 1065;
 			var NO_CONCEPT_ID = 1066;
@@ -113,12 +113,13 @@
 					jq('#hei-id :input').prop('disabled', true);
 				}
 			}
-			function includeMothersNames(){
-				jq.getJSON('/' + OPENMRS_CONTEXT_PATH +  '/kenyaemr/patient/patientUtils/getMothers.action',{ patientId: patientId, now:encDate },function(data) {
+			function includeMothersNames() {
+				jq.getJSON('/' + OPENMRS_CONTEXT_PATH +  '/kenyaemr/patient/patientUtils/getMothers.action',{ patientId: patientId },function(data) {
+					var motherName;
 					for ( var p in data){
-						var motherName = data[p].name;
-						jq('#mother-name-list').html(motherName);
+						motherName = data[p].name;
 					}
+					jq('#mother-name-list').html(motherName);
 				});
 			}
 		jq(function() {
