Added new patient-list reports to the MCHMS program.

--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
@@ -158,7 +158,7 @@
 	</td>
 </tr>
 <tr>
-	<td>
+	<td valign="top">
 		<legend>Maternal Profile</legend>
 		<table align="center" width="100%" class="tb1">
 			<tr>
@@ -204,6 +204,12 @@
 					<obs conceptId="5596AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true"/>
 				</td>
 			</tr>
+			<tr>
+				<td colspan="2"></td>
+			</tr>
+			<tr>
+				<td colspan="2"></td>
+			</tr>
 		</table>
 	</td>
 	<td valign="top">
@@ -228,7 +234,13 @@
 				</td>
 			</tr>
 			<tr>
-				<td>HIV:</td>
+				<td>BS for MPS:</td>
+				<td>
+					<obs conceptId="32AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+				</td>
+			</tr>
+			<tr>
+				<td>HIV Status:</td>
 				<td>
 					<obs conceptId="159427AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true"
 						 answerConceptIds="703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1402AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
@@ -236,12 +248,19 @@
 				</td>
 			</tr>
 			<tr>
-				<td>BS for MPS:</td>
+				<td>HIV Test Date:</td>
 				<td>
-					<obs conceptId="32AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+					<obs conceptId="160554AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
 				</td>
 			</tr>
-
+			<tr>
+				<td>Partner HIV Status:</td>
+				<td>
+					<obs conceptId="1436AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true"
+						 answerConceptIds="703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+						 answerLabels="HIV Positive,HIV Negative,Unknown"/>
+				</td>
+			</tr>
 		</table>
 	</td>
 </tr>
