Changes from PR * Addition of new encountertype for HEI completion * Removal of redundant fields * Accessing the right packages * Few edits from the forms

--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsEnrollment.html
@@ -317,7 +317,7 @@
 				</tr>
 				<tr>
 					<td colspan="3" style="background-color: #696969; color: #ffffff;">
-						PARENT'S PROFILE(<i>Edit using Relationship app</i>)
+						PARENT'S PROFILE(<i>Edit using Relationship Section</i>)
 					</td>
 				</tr>
 				<tr>
